<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llFieldButtons">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_random_text"
            android:id="@+id/btnRandom"
            android:layout_weight="1.5"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_text"
            android:id="@+id/btnSave"
            android:layout_weight="1.5"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_load_text"
            android:id="@+id/btnOpen"
            android:layout_weight="1.5"/>
    </LinearLayout>

    <com.glebit.gameoflife.LifeGrid
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/lifeGrid"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llButtons">

     <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start_text"
        android:id="@+id/btnStart"
        android:layout_weight="1.5"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pause_text"
        android:id="@+id/btnPause"
        android:layout_weight="1.5"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/button_reset_text"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/button_next_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:measureWithLargestChild="false"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/text_view_speed_text"
        android:id="@+id/speedTextView"
        android:layout_gravity="center"/>
    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/speedBar"
        android:layout_weight="1"
        android:max="100"/>
    </LinearLayout>
</LinearLayout>
